# mythos-core

./: Cargo.toml  README.md  TODO.md  core.charon  install.sh
data/: charon  lib.sh  mythos-dirs.sh  mythos-install.sh  mythos-uninstall  mythos-uninstall.sh  mythos-vars.sh  print-mythos-dirs  test-mythos-dirs.sh
shell-scripts/: cargo-test.sh  lib.sh  mythos-install.sh  mythos-vars.sh
src/: cli.rs  conf.rs  dirs.rs  lib.rs  logger.rs
src/charon/: bin.rs  parser.rs
src/charon/parser/: install.rs  mod.rs
src/utils/: mythos-args.rs  mythos-conf.rs
tests/charon/dest/charon_file/charon/: test.dryrun.charon  test2.charon  test3.dryrun.charon  test_uninstall.charon
tests/charon/targets/: test0.charon  test1.charon  test2.charon  test3.charon
tests/config/: config_tester.conf
tests/lconfig/: config_tester.toml
tests/lconfig/abstract_config/: dict2.toml
tests/lconfig/abstract_config/list1/list1_list2/: config
