[package]
name = "mythos-core"
version = "2.0.0"
edition = "2021"

[dependencies]
chrono = "0.4.38"
duct = "0.13.6"
glob = "0.3.1"
serde = "1.0.189"
serde_derive = "1.0.189"
toml = "0.8.2"

[[bin]]
name = "mythos-conf"
path = "src/utils/mythos-conf.rs"

[[bin]]
name = "mythos-args"
path = "src/utils/mythos-args.rs"
